implementation of markup1(site)

--- a/front/academy_site/style/_modules.scss
+++ b/front/academy_site/style/_modules.scss
@@ -24,3 +24,5 @@
 @import "modules/change-password-popup";
 @import "modules/all-lessons-popup";
 @import "modules/my-courses";
+@import "modules/password-popup";
+@import "modules/forgot-password-popup";
