--- a/front/academy_site/style/modules/_footer.scss
+++ b/front/academy_site/style/modules/_footer.scss
@@ -4,7 +4,7 @@ footer {
   .wr {
     display: flex;
     justify-content: space-between;
-    .footer-logo {
+    .footer-logo a {
       color: #fff;
       font-size: 18px;
     }
