--- a/front/academy_site/style/modules/_header-signin.scss
+++ b/front/academy_site/style/modules/_header-signin.scss
@@ -50,7 +50,7 @@
           display: flex;
           align-items: center;
           justify-content: center;
-          .photo-user{
+          .photo-user img{
             width: 30px;
             height: 30px;
             border: solid 1px #979797;
