--- a/front/academy_site/style/modules/_header.scss
+++ b/front/academy_site/style/modules/_header.scss
@@ -39,7 +39,7 @@ header {
         justify-content: space-between;
         border-bottom: 1px solid #505363;
         height: 13vh;
-        .logo{
+        .logo a{
           font-size: 20px;
           color: #2c3039;
           span{
