--- a/front/academy_site/style/modules/_teacher-popup.scss
+++ b/front/academy_site/style/modules/_teacher-popup.scss
@@ -7,7 +7,7 @@
     .teacher-info{
       display: flex;
       align-items: center;
-      .teacher-photo{
+      .teacher-photo img{
         width: 125px;
         height: 125px;
         border-radius: 5px;
