--- a/front/academy_site/style/modules/_course.scss
+++ b/front/academy_site/style/modules/_course.scss
@@ -1,28 +1,28 @@
 .course {
   padding: 30px 0 0 0;
   .wr {
-    .title{
+    .title {
       font-size: 24px;
       font-weight: bold;
       color: #505363;
       margin: 30px 0 0 0;
     }
-    .top-side{
+    .top-side {
       display: flex;
       justify-content: space-between;
       .l-side {
-      flex-basis: 70%;
-      .top-box{
-        display: flex;
-        align-items: center;
-        margin: 0 0 50px  0;
-        .b-title{
-          margin: 0 17px 0 0;
+        flex-basis: 70%;
+        .top-box {
+          display: flex;
+          align-items: center;
+          margin: 0 0 50px 0;
+          .b-title {
+            margin: 0 17px 0 0;
+          }
+          .button-red {
+            margin: 0 17px;
+          }
         }
-        .button-red{
-          margin: 0 17px;
-        }
-      }
         .list-item {
           display: flex;
           justify-content: space-between;
@@ -67,64 +67,72 @@
             }
           }
         }
-        .button-box{
-          padding: 0;
-          border-bottom: none;
-          .button{
-            line-height: 30px;
-            min-width: 125px;
-            font-family: HelveticaNeue;
-            text-transform: none;
-            font-weight: 300;
-            font-size: 16px;
-          }
-          .button-green{
+        .current-position {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          border-radius: 5px;
+          font-family: HelveticaNeue;
+          font-size: 16px;
+          text-align: center;
+          color: #ffffff;
+          .active {
             background-color: #7ed321;
-            color: #ffffff;
+            padding: 10px 0px;
+            border-radius: 5px;
+            width: 125px;
           }
-          .button-red{
+          .canceled {
             background-color: #d0021b;
-            color: #ffffff;
+            padding: 10px 0px;
+            border-radius: 5px;
+            margin: 0 10px 0 10px;
+            width: 125px;
           }
-          .button-silver{
+          .archived {
             background-color: #8c97b2;
-            color: #ffffff;
+            padding: 10px 0px;
+            border-radius: 5px;
+            width: 125px;
           }
+
         }
+      }
     }
-    }
-    p{
+    p {
       margin: 20px 0 20px 0;
     }
-    .teachers{
+    .teachers {
       padding: 0 0 30px 0;
       border-bottom: 1px solid rgba(140, 151, 178, .5);
-      font-family: HelveticaNeue;
-      font-size: 24px;
-      font-weight: bold;
-      a{
+      & > span {
+        font-family: HelveticaNeue;
+        font-size: 24px;
+        font-weight: bold;
+      }
+      a {
         color: #5a1a8c;
       }
-      span{
+      span {
         color: #505363;
       }
     }
-    .button-box{
+    .button-box {
       padding: 0 0 30px 0;
       border-bottom: 1px solid rgba(140, 151, 178, .5);
-      .button{
+      .button {
         line-height: 50px;
         min-width: 125px;
         font-size: 16px;
       }
     }
-    .r-side{
-      .free-seats{
+    .r-side {
+      .free-seats {
         width: 210px;
         height: 72px;
         background-color: #dadfea;
         position: relative;
-        .seats{
+        .seats {
           position: absolute;
           top: 50%;
           left: 50%;
@@ -135,7 +143,7 @@
           align-items: center;
           justify-content: space-between;
         }
-        .rest{
+        .rest {
           font-size: 17px;
           font-weight: bold;
           color: #d0021b;
