--- a/front/academy_site/style/modules/_our-teachers.scss
+++ b/front/academy_site/style/modules/_our-teachers.scss
@@ -10,13 +10,13 @@
       ul{
         display: flex;
         flex-basis: 75%;
-        li{
+        li.teacher-block{
           margin: 0 70px 30px 0;
           text-align: center;
           &:nth-child(5n){
             margin: 0 0 30px 0;
           }
-          .teacher-photo{
+          .teacher-photo img{
             width: 125px;
             height: 125px;
             border-radius: 5px;
