--- a/front/academy_site/style/modules/_partners.scss
+++ b/front/academy_site/style/modules/_partners.scss
@@ -6,14 +6,14 @@
     }
     .partners-list{
       display: flex;
-      //align-items: center;
       flex-wrap: wrap;
-      //justify-content: space-between;
       border-bottom: solid 1px #8c97b2;
-      .partners-i{
+      .partners-i a{
+        display: inline-block;
         width: 100px;
         height: 100px;
-        background-color: #d8d8d8;
+        background: #d8d8d8 center no-repeat;
+        background-size: cover;
         margin: 0 1% 30px 0;
         flex-basis: 12.5%;
       }
