--- a/front/academy_site/style/modules/_teacher-show-more-popup.scss
+++ b/front/academy_site/style/modules/_teacher-show-more-popup.scss
@@ -24,7 +24,7 @@
         //&:nth-child(5n){
         //  margin: 0 0 30px 0;
         //}
-        .teacher-photo{
+        .teacher-photo img{
           width: 125px;
           height: 125px;
           border-radius: 5px;
