--- a/front/academy_site/style/modules/_themes.scss
+++ b/front/academy_site/style/modules/_themes.scss
@@ -1,35 +1,47 @@
-.themes{
+.themes {
   padding: 30px 0 0 0;
-  .wr{
-    p{
+  .wr {
+    p {
       margin: 18px 0 30px 0;
       font-family: HelveticaNeue;
     }
-    .themes-list{
+    .themes-list {
       display: flex;
       flex-wrap: wrap;
       border-bottom: solid 1px #8c97b2;
-      li{
+      li {
         margin: 0 .5% 28px .5%;
         flex-basis: 24%;
-        a{
-          .themes-img{
+        a {
+          .themes-img {
             width: 264px;
             height: 200px;
             opacity: 0.8;
             border-radius: 5px;
-            background-color: rgba(89, 33, 138, 0.6);
             position: relative;
             margin: 0 auto;
-            .themes-name{
+            background: rgba(255, 0, 0, 0.5) center no-repeat;
+            background-size: cover;
+            &:after {
+              position: absolute;
+              content: " ";
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              z-index: 0;
+              background: rgba(255, 0, 0, 0.5) center no-repeat;
+            }
+            .themes-name {
               position: absolute;
               top: 50%;
               left: 50%;
-              transform: translate(-50%,-50%);
+              transform: translate(-50%, -50%);
               font-size: 18px;
               font-weight: bold;
               color: #ffffff;
               white-space: nowrap;
+              z-index: 10;
             }
           }
         }
@@ -37,12 +49,11 @@
     }
   }
 }
-@media only screen
-and (max-width: 1060px) {
-  .themes{
-    .wr{
-      .themes-list{
-        li{
+@media only screen and (max-width: 1060px) {
+  .themes {
+    .wr {
+      .themes-list {
+        li {
           margin: 0 .5% 28px .5%;
           flex-basis: 30%;
         }
