--- a/templates/academy_site/footer.html
+++ b/templates/academy_site/footer.html
@@ -1,1 +1,44 @@
-FOOTER
+{% load static %}{% get_static_prefix as STATIC_PREFIX %}
+
+<footer>
+    <div class="wr">
+        <div class="footer-logo">
+            <a href="{% url 'academy_site:home' %}">HERSTELACADEMIE</a>
+        </div>
+        <div class="footer-nav">
+            <ul class="nav-menu">
+                <li>ABOUT
+                    <ul>
+                        <li><a href="#">Our Mission</a></li>
+                        <li><a href="#">Company</a></li>
+                        <li><a href="#">Jobs</a></li>
+                        <li><a href="#"> Blog</a></li>
+                    </ul>
+                </li>
+                <li>SUPPORT
+                    <ul>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Help Center</a></li>
+                        <li><a href="#">Terms of Service</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                    </ul>
+                </li>
+                <li>CONTACT
+                    <ul>
+                        <li><a href="#">Email Us</a></li>
+                        <li><a href="#">Live Chat</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <div class="social">
+            <p>We in social networks</p>
+            <ul class="social-links">
+                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+            </ul>
+        </div>
+    </div>
+</footer>
