--- a/templates/academy_site/profile_edit.html
+++ b/templates/academy_site/profile_edit.html
@@ -2,17 +2,282 @@
 {% load static %}{% get_static_prefix as STATIC_PREFIX %}
 
 {% block content %}
-    <h2>EDIT PROFILE</h2>
-    <form method="post" enctype="multipart/form-data" action="{% url 'academy_site:profile_edit' %}">
-        {% csrf_token %}
-        {{ edit_form.as_p }}
-        <button type="submit">Save</button>
-    </form>
-
-    <p>Change password</p>
-    <form method="post" action="{% url 'academy_site:change_password' %}">
-        {% csrf_token %}
-        {{ change_password_form.as_p }}
-        <button type="submit">Change</button>
-    </form>
+    <div class="edit-myinfo">
+        <div class="wr">
+            <div class="b-title">
+                Edit my Info
+            </div>
+            <div class="profile">
+                <form method="post" enctype="multipart/form-data" action="{% url 'academy_site:profile_edit' %}">
+                    {% csrf_token %}
+                    <div class="edit-profile">
+                        <div class="avatar-upload">
+                            <div class="avatar-edit">
+                                <input type='file' id="imageUpload" accept=".png, .jpg, .jpeg"
+                                       name="{{ edit_form.photo.name }}"
+                                       {% if edit_form.photo.initial != None %}value="{{ edit_form.photo.initial }}"{% endif %}
+                                       {% if edit_form.photo.field.required %}required{% endif %}>
+                                <label for="imageUpload">
+                                    <i class="fa fa-camera"></i>
+                                    add photo
+                                </label>
+                            </div>
+                            <div class="avatar-preview">
+                                <div id="imagePreview" style="background-image: url(
+                                        {% if user.photo %}
+                                            {{ user.photo.url }}
+                                        {% else %}
+                                            {{ STATIC_PREFIX }}academy_site/img/photo.png
+                                        {% endif %}
+                                        );">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="r-side">
+                            <div class="input-wr">
+                                <label>Name</label>
+                                <input class="input-elem-form"
+                                       type="text"
+                                       name="{{ edit_form.first_name.name }}"
+                                       {% if edit_form.first_name.initial != None %}value="{{ edit_form.first_name.initial }}"{% endif %}
+                                       {% if edit_form.first_name.field.required %}required{% endif %}>
+                            </div>
+                            <div class="input-wr">
+                                <label>Last Name</label>
+                                <input class="input-elem-form"
+                                       type="text"
+                                       name="{{ edit_form.last_name.name }}"
+                                       {% if edit_form.last_name.initial != None %}value="{{ edit_form.last_name.initial }}"{% endif %}
+                                       {% if edit_form.last_name.field.required %}required{% endif %}>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="change-password">
+                        <img src="{{ STATIC_PREFIX }}academy_site/img/lock.svg" alt="">
+                        <a href="#" class="change-password">Change password</a>
+                    </div>
+                    <label>Birthday</label>
+                    <div class="user-birthday">
+                        <div class="form-select-wr input-wr">
+                            <div class="text__center">
+                                <select class="cs-select cs-skin-elastic" name="day">
+                                    <option value="Days">Days</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8</option>
+                                    <option value="9">9</option>
+                                    <option value="10">10</option>
+                                    <option value="11">11</option>
+                                    <option value="12">12</option>
+                                    <option value="13">13</option>
+                                    <option value="14">14</option>
+                                    <option value="15">15</option>
+                                    <option value="16">16</option>
+                                    <option value="17">17</option>
+                                    <option value="18">18</option>
+                                    <option value="19">19</option>
+                                    <option value="20">20</option>
+                                    <option value="21">21</option>
+                                    <option value="22">22</option>
+                                    <option value="23">23</option>
+                                    <option value="24">24</option>
+                                    <option value="25">25</option>
+                                    <option value="26">26</option>
+                                    <option value="27">27</option>
+                                    <option value="28">28</option>
+                                    <option value="29">29</option>
+                                    <option value="30">30</option>
+                                    <option value="31">31</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-select-wr input-wr">
+                            <div class="text__center">
+                                <select class="cs-select cs-skin-elastic" name="month">
+                                    <option value="Month">Month</option>
+                                    <option value="1">January</option>
+                                    <option value="2">February</option>
+                                    <option value="3">March</option>
+                                    <option value="4">April</option>
+                                    <option value="5">May</option>
+                                    <option value="6">June</option>
+                                    <option value="7">July</option>
+                                    <option value="8">August</option>
+                                    <option value="9">September</option>
+                                    <option value="10">October</option>
+                                    <option value="11">November</option>
+                                    <option value="12">December</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-select-wr input-wr">
+                            <div class="text__center">
+                                <select class="cs-select cs-skin-elastic" name="year">
+                                    <option value="Year">Year</option>
+                                    <option value="1944">1944</option>
+                                    <option value="1945">1945</option>
+                                    <option value="1946">1946</option>
+                                    <option value="1947">1947</option>
+                                    <option value="1948">1948</option>
+                                    <option value="1949">1949</option>
+                                    <option value="1950">1950</option>
+                                    <option value="1951">1951</option>
+                                    <option value="1952">1952</option>
+                                    <option value="1953">1953</option>
+                                    <option value="1954">1954</option>
+                                    <option value="1955">1955</option>
+                                    <option value="1956">1956</option>
+                                    <option value="1957">1957</option>
+                                    <option value="1958">1958</option>
+                                    <option value="1959">1959</option>
+                                    <option value="1960">1960</option>
+                                    <option value="1961">1961</option>
+                                    <option value="1962">1962</option>
+                                    <option value="1963">1963</option>
+                                    <option value="1964">1964</option>
+                                    <option value="1965">1965</option>
+                                    <option value="1966">1966</option>
+                                    <option value="1967">1967</option>
+                                    <option value="1968">1968</option>
+                                    <option value="1969">1969</option>
+                                    <option value="1970">1970</option>
+                                    <option value="1971">1971</option>
+                                    <option value="1972">1972</option>
+                                    <option value="1973">1973</option>
+                                    <option value="1974">1974</option>
+                                    <option value="1975">1975</option>
+                                    <option value="1976">1976</option>
+                                    <option value="1977">1977</option>
+                                    <option value="1978">1978</option>
+                                    <option value="1979">1979</option>
+                                    <option value="1980">1980</option>
+                                    <option value="1981">1981</option>
+                                    <option value="1982">1982</option>
+                                    <option value="1983">1983</option>
+                                    <option value="1984">1984</option>
+                                    <option value="1985">1985</option>
+                                    <option value="1986">1986</option>
+                                    <option value="1987">1987</option>
+                                    <option value="1988">1988</option>
+                                    <option value="1989">1989</option>
+                                    <option value="1990">1990</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="input-wr">
+                        <label>Email</label>
+                        <input class="input-elem-form"
+                               type="email"
+                               name="{{ edit_form.email.name }}"
+                               {% if edit_form.email.initial != None %}value="{{ edit_form.email.initial }}"{% endif %}
+                               {% if edit_form.email.field.required %}required{% endif %}>
+                    </div>
+                    <div class="input-wr">
+                        <label>Phone</label>
+                        <input class="input-elem-form"
+                               type="tel"
+                               name="{{ edit_form.phone.name }}"
+                               {% if edit_form.phone.initial != None %}value="{{ edit_form.phone.initial }}"{% endif %}
+                               {% if edit_form.phone.field.required %}required{% endif %}>
+                    </div>
+                    <div class="input-wr country">
+                        <label>Country</label>
+                        <input class="input-elem-form"
+                               type="text"
+                               name="{{ edit_form.country.name }}"
+                               {% if edit_form.country.initial != None %}value="{{ edit_form.country.initial }}"{% endif %}
+                               {% if edit_form.country.field.required %}required{% endif %}>
+                    </div>
+                    <div class="input-wr city">
+                        <label>City</label>
+                        <input class="input-elem-form"
+                               type="text"
+                               name="{{ edit_form.city.name }}"
+                               {% if edit_form.city.initial != None %}value="{{ edit_form.city.initial }}"{% endif %}
+                               {% if edit_form.city.field.required %}required{% endif %}>
+                    </div>
+                    <div class="input-wr">
+                        <label>Adress</label>
+                        <input class="input-elem-form"
+                               type="text"
+                               name="{{ edit_form.address.name }}"
+                               {% if edit_form.address.initial != None %}value="{{ edit_form.address.initial }}"{% endif %}
+                               {% if edit_form.address.field.required %}required{% endif %}>
+                    </div>
+                    <div class="input-wr postcode">
+                        <label>Postcode</label>
+                        <input class="input-elem-form"
+                               type="number"
+                               name="{{ edit_form.postcode.name }}"
+                               {% if edit_form.postcode.initial != None %}value="{{ edit_form.postcode.initial }}"{% endif %}
+                               {% if edit_form.postcode.field.required %}required{% endif %}>
+                    </div>
+                    <div class="input-wr language">
+                        <label>Mother language</label>
+                        <input class="input-elem-form"
+                               type="text"
+                               name="{{ edit_form.mother_language.name }}"
+                               {% if edit_form.mother_language.initial != None %}value="{{ edit_form.mother_language.initial }}"{% endif %}
+                               {% if edit_form.mother_language.field.required %}required{% endif %}>
+                    </div>
+                    <div class="input-wr salutation">
+                        <label>Salutation</label>
+                        <input class="input-elem-form"
+                               type="text"
+                               name="{{ edit_form.salutation.name }}"
+                               {% if edit_form.salutation.initial != None %}value="{{ edit_form.salutation.initial }}"{% endif %}
+                               {% if edit_form.salutation.field.required %}required{% endif %}>
+                    </div>
+                    <div class="button-box">
+                        <button type="submit" class="button button-purple" id="form_save">Save</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="change-password-popup popup">
+        <div class="overlay"></div>
+        <div class="popup-inner">
+            <form method="post" action="{% url 'academy_site:change_password' %}">
+                {% csrf_token %}
+                <div class="close"></div>
+                <div class="b-title">
+                    Change password
+                </div>
+                <div class="input-wr">
+                    <label>Old password</label>
+                    <input class="input-elem-form"
+                           type="password"
+                           name="{{ change_password_form.old_password.name }}"
+                           {% if change_password_form.old_password.initial != None %}value="{{ change_password_form.old_password.initial }}"{% endif %}
+                           {% if change_password_form.old_password.field.required %}required{% endif %}>
+                </div>
+                <div class="input-wr">
+                    <label>New password</label>
+                    <input class="input-elem-form"
+                           type="password"
+                           name="{{ change_password_form.new_password.name }}"
+                           {% if change_password_form.new_password.initial != None %}value="{{ change_password_form.new_password.initial }}"{% endif %}
+                           {% if change_password_form.new_password.field.required %}required{% endif %}>
+                </div>
+                <div class="input-wr">
+                    <label>Reenter password</label>
+                    <input class="input-elem-form"
+                           type="password"
+                           name="{{ change_password_form.reenter_password.name }}"
+                           {% if change_password_form.reenter_password.initial != None %}value="{{ change_password_form.reenter_password.initial }}"{% endif %}
+                           {% if change_password_form.reenter_password.field.required %}required{% endif %}>
+                </div>
+                <div class="button-box">
+                    <button type="submit" class="button button-purple" id="form_save">Save</button>
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
